<resources>
    <string name="app_name">Speed Camera Alerts</string>
    <string name="start_monitoring">Start monitoring</string>
    <string name="stop_monitoring">Stop monitoring</string>
    <string name="status_active">Monitoring active</string>
    <string name="status_stopped">Monitoring stopped</string>
    <string name="no_nearest">Nearest point: none</string>
    <string name="no_alert">Last alert: none</string>
    <string name="channel_name">Speed camera monitoring</string>
    <string name="channel_description">Foreground monitoring service for nearby warning points.</string>
    <string name="notification_text">Monitoring warning points</string>
</resources>
